--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "browserify": "^8.1.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
+    "gulp-jscs": "^1.4.0",
+    "gulp-jshint": "^1.9.0",
     "gulp-karma": "0.0.4",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
     "karma-browserify": "^2.0.0",
     "karma-chai": "^0.1.0",
